service.yaml
# @format

apiVersion: v1
kind: Service
metadata:
  name: k8s-microproject-service
spec:
  selector:
    app: k8s-microproject # Cela doit correspondre aux labels des pods dans le déploiement
  ports:
    - protocol: TCP
      port: 3000 # Le port sur lequel le service écoute
      targetPort: 3000 # Le port sur lequel le conteneur écoute à l'intérieur
      nodePort: 30001 # Le port du nœud exposé pour accéder au service (entre 30000 et 32767)
  type: NodePort # Type de service permettant d'exposer l'application sur un port du nœud
